syntax = "proto3";

package com.lastmile.rider.proto;

import "google/api/annotations.proto";
import "google/api/http.proto";          // <--- REQUIRED for envoy transcoder
import "google/protobuf/empty.proto"; 

option java_multiple_files = true;
option java_package = "com.lastmile.rider.proto";
option java_outer_classname = "RiderProto";

service RiderService {
  rpc RegisterRideRequest(RegisterRideRequestRequest) returns (RegisterRideRequestResponse){
    option (google.api.http) = {
      post: "/rider/ride-register/{rider_id}"
      body: "*"
    };
  };

  rpc GetRideStatus(GetRideStatusRequest) returns (GetRideStatusResponse){
    option (google.api.http) = {
      get: "/rider/ride-status/{rider_id}"
    };
  };

  rpc ListRideRequests(ListRideRequestsRequest) returns (ListRideRequestsResponse) {
    option (google.api.http) = {
      get: "/rider/ride-requests/{rider_id}"
    };
  };

  rpc GetRiderDashboard(GetRiderDashboardRequest) returns (GetRiderDashboardResponse){
    option (google.api.http) = {
      get: "/rider/dashboard/{rider_id}"
    };
  };

  rpc GetRiderInfo(GetRiderInfoRequest) returns (GetRiderInfoResponse);  

  rpc CancelRideRequest(CancelRideRequestRequest) returns (CancelRideRequestResponse);

  rpc RateDriver(RateDriverRequest) returns (RateDriverResponse);

  rpc SetRatingFromDriver(SetRatingFromDriverRequest) returns (SetRatingFromDriverResponse);

  rpc MatchedWithDriver (MatchedWithDriverRequest) returns (MatchedWithDriverResponse);

  rpc RideStarted (RideStartedRequest) returns (RideStartedResponse);

  rpc RideCompleted (RideCompletedRequest) returns (RideCompletedResponse);

}

message RegisterRideRequestRequest {
  string rider_id = 1;
  string metro_station = 2;
  string destination = 3;
  int64 arrival_time = 4;
}

message RegisterRideRequestResponse {
  string ride_request_id = 1;
  bool success = 2;
  string message = 3;
}

message GetRideStatusRequest {
  string rider_id = 1;
}

message GetRideStatusResponse {
  string ride_request_id = 1;
  RideStatus status = 2;
  string driver_id = 3;
  string trip_id = 4;
  bool success = 5;
}

message CancelRideRequestRequest {
  string rider_id = 1;
}

message CancelRideRequestResponse {
  bool success = 1;
  string message = 2;
}

message RideRequestItem {
  string ride_request_id = 1;
  string rider_id = 2;
  string metro_station = 3;
  string destination = 4;
  int64 arrival_time = 5;
  RideStatus status = 6;
  string driver_id = 7;
  string trip_id = 8;
  int64 request_time = 9;
}

message ListRideRequestsRequest {
  string rider_id = 1;
}

message ListRideRequestsResponse {
  repeated RideRequestItem ride_requests = 1;
  bool success = 2;
}

message MatchedWithDriverRequest {
  string rider_id = 1;
  string driver_id = 2;
  string trip_id = 3;
}

message MatchedWithDriverResponse {
  bool success = 1;
  string message = 2;
}

message RideStartedRequest {
  string rider_id = 1;
  string trip_id = 2;
}

message RideStartedResponse {
  bool success = 1;
  string message = 2;
}

message RideCompletedRequest {
  string rider_id = 1;
  string trip_id = 2;
  int64 dropoff_time = 3;
}

message RideCompletedResponse {
  bool success = 1;
  string message = 2;
}

message GetRiderDashboardRequest {
  string rider_id = 1;
}

message GetRiderDashboardResponse {
  string rider_id = 1;
  double rating = 2;
  int32 total_rides = 3;
  RideRequestItem current_ride = 4;
  repeated RideRequestItem ride_history = 5;
  bool success = 6;
}

message GetRiderInfoRequest {
  string rider_id = 1;
}

message GetRiderInfoResponse {
  string rider_id = 1;
  double rating = 2;
  int32 total_rides = 3;
  bool success = 4;
}

message RateDriverRequest {
  string rider_id = 1;
  string trip_id = 2;
  int32 rating = 3;
  string feedback = 4;
}

message RateDriverResponse {
  bool success = 1;
  string message = 2;
}

message SetRatingFromDriverRequest {
  string rider_id = 1;
  int32 rating = 2;
}

message SetRatingFromDriverResponse {
  bool success = 1;
  string message = 2;
}

enum RideStatus {
  PENDING = 0;
  MATCHED = 1;
  IN_PROGRESS = 2;
  COMPLETED = 3;
  CANCELLED = 4;
}

